-Modified contact form "mail" label to fix issue on mobile devices.

--- a/css/drupal.css
+++ b/css/drupal.css
@@ -170,7 +170,7 @@ header h1 {
 	margin-bottom: 15px !important;
 }
 
-.form-item-name label, .form-item-subject label {
+.form-item-name label, .form-item-subject label, .form-item-mail label {
 	padding: 5px 0px 0px 5px;
 }
 
